--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.web.resources.add-mappings=false
 spring.redis.host=localhost
 spring.redis.port=6379
 
+#file.upload-dir=/app/uploads
+file.upload-dir=C:/catshop/uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
