--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 #file.upload-dir=/app/uploads
-file.upload-dir=C:/Users/tauha/Downloads/catshop/spring/uploads
+file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
