--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -29,3 +29,6 @@ file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
