--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=catshop
 
 # Cấu hình PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/Test
 spring.datasource.username=postgres
-spring.datasource.password=2005
+spring.datasource.password=manhdz2005
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
