rut_gon_cua_1.0

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=catshop
 # Cấu hình PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
 spring.datasource.username=postgres
-spring.datasource.password=2005
+spring.datasource.password=deocanmk22
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
