--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -39,5 +39,18 @@ spring.mail.default-encoding=UTF-8
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.password=   # ?? tr?ng n?u kh?ng ??t password
+spring.data.redis.password=
 spring.data.redis.timeout=60000
+
+# ----- ??NG KÝ CLIENT V?I GOOGLE -----
+spring.security.oauth2.client.registration.google.client-id=49213557997-6jbtjailqqauq1ufca5b20dr3a46m85l.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid, profile, email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# ----- C?U HÌNH PROVIDER (GOOGLE) -----
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
