Add admin components and review section

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=catshop
 
 # Cấu hình PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
 spring.datasource.username=postgres
-spring.datasource.password=deocanmk22
+spring.datasource.password=363636
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
