--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -132,6 +132,14 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.warrenstrange</groupId>
+            <artifactId>googleauth</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
