--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/qrcode.react": "^1.0.5",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -57,6 +58,7 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pg": "^8.16.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
