--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=catshop
 
 # Cấu hình PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/Test
+spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
