--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,26 +1,52 @@
 spring.application.name=catshop
 
-# Cấu hình PostgreSQL
+# ===================== DATABASE (PostgreSQL) =====================
 spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
 spring.datasource.username=postgres
 spring.datasource.password=1234
-
-# JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Format SQL cho dễ nhìn
-#spring.jpa.properties.hibernate.format_sql=true
-
-# In giá trị tham số binding (thấy luôn dữ liệu truyền vào ?)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
+# ===================== WEB CONFIG =====================
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-spring.redis.host=localhost
-spring.redis.port=6379
+# ===================== FILE UPLOAD =====================
+file.upload-dir=uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# ===================== REDIS =====================
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.timeout=60000
+
+# ===================== EMAIL (GMAIL SMTP) =====================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tauhaitac3k@gmail.com
+spring.mail.password=sbcpglcxxepkzfbu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+# ===================== GOOGLE OAUTH2 =====================
+spring.security.oauth2.client.registration.google.client-id=49213557997-6jbtjailqqauq1ufca5b20dr3a46m85l.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+#spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-name=Google
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
 
