--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.data.redis.timeout=60000
 # ===================== EMAIL (GMAIL SMTP) =====================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tauhaitac3k@gmail.com
-spring.mail.password=sbcpglcxxepkzfbu
+spring.mail.username=cumanhpt@gmail.com
+spring.mail.password=Manhdz2005
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
