--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -29,9 +29,13 @@ spring.data.redis.timeout=60000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=cumanhpt@gmail.com
-spring.mail.password=Manhdz2005
+spring.mail.password=giqhwjdvpqwxzxec
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.default-encoding=UTF-8
 
 # ===================== GOOGLE OAUTH2 =====================
@@ -49,4 +53,7 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.sun.mail=DEBUG
+logging.level.com.catshop.catshop.service.impl.OtpServiceImpl=DEBUG
 
