--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -57,3 +57,9 @@ logging.level.org.springframework.mail=DEBUG
 logging.level.com.sun.mail=DEBUG
 logging.level.com.catshop.catshop.service.impl.OtpServiceImpl=DEBUG
 
+# ===================== FRONTEND URL (for QR Login) =====================
+# URL của frontend để tạo QR code link
+# Development: http://localhost:5173
+# Production: https://yourdomain.com
+frontend.url=http://localhost:5173
+
