--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -59,7 +59,9 @@ logging.level.com.catshop.catshop.service.impl.OtpServiceImpl=DEBUG
 
 # ===================== FRONTEND URL (for QR Login) =====================
 # URL của frontend để tạo QR code link
-# Development: http://localhost:5173
+# Development: http://localhost:5173 (cho máy tính)
+# Hoặc http://192.168.0.101:5173 (cho mobile - thay bằng IP của máy bạn)
 # Production: https://yourdomain.com
-frontend.url=http://localhost:5173
+# Lưu ý: Nếu dùng mobile, cần thay localhost bằng IP thực của máy tính
+frontend.url=http://192.168.0.101:5173
 
