--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -65,3 +65,14 @@ logging.level.com.catshop.catshop.service.impl.OtpServiceImpl=DEBUG
 # Lưu ý: Nếu dùng mobile, cần thay localhost bằng IP thực của máy tính
 frontend.url=http://192.168.0.101:5173
 
+# ===================== VIETQR CONFIGURATION =====================
+# Thông tin tài khoản ngân hàng để tạo mã QR thanh toán
+# Thay đổi các giá trị này theo thông tin tài khoản thực tế của bạn
+# Format: https://api.vietqr.io/image/{acqId}-{accountNo}-{templateId}.jpg?accountName={name}&amount={amount}&addInfo={info}
+vietqr.account.no=0987149482
+vietqr.account.name=NGUYEN TUAN MANH
+vietqr.bank.name=MB Bank
+vietqr.acq.id=970422
+vietqr.template.id=REbYlnu
+vietqr.api.url=https://api.vietqr.io/image
+
