fix hiển thi sp

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -4,8 +4,12 @@ spring.application.name=catshop
 spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
 spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Tắt validation foreign key tạm thời để app có thể khởi động
+spring.jpa.properties.hibernate.check_nullability=false
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
