--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -63,3 +63,28 @@ logging.level.com.catshop.catshop.service.impl.OtpServiceImpl=DEBUG
 # Production: https://yourdomain.com
 frontend.url=http://localhost:5173
 
+# ===================== OAUTH2 REDIRECT CONFIGURATION =====================
+# Trang redirect sau khi đăng nhập Google OAuth thành công
+# Có thể là: /oauth2/success (để xử lý tokens), /profile, /account, etc.
+# Nếu dùng /oauth2/success, frontend sẽ tự động redirect về /profile sau khi lưu tokens
+oauth2.redirect.path=/oauth2/success
+
+# ===================== MFA SECURITY CONFIGURATION =====================
+# Số lần thử MFA thất bại tối đa trước khi khóa tài khoản
+mfa.security.max-failed-attempts=5
+
+# Thời gian khóa tài khoản (phút) sau khi vượt quá số lần thử
+mfa.security.lockout-duration-minutes=15
+
+# Khoảng thời gian (phút) để tính rate limiting
+mfa.security.rate-limit-window-minutes=15
+
+# Số lần thử tối đa trong một khoảng thời gian
+mfa.security.max-attempts-per-window=5
+
+# Ngưỡng số lần thử thất bại từ một IP để coi là đáng ngờ
+mfa.security.suspicious-ip-threshold=10
+
+# Thời gian hết hạn của trusted device (ngày)
+mfa.security.trusted-device-expiry-days=30
+
