--- a/Cat_Shop-main/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-main/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=catshop
 
 # ===================== DATABASE (PostgreSQL) =====================
-spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/catshop2
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
