--- a/Cat_Shop-main/Cat_Shop-femfa/frontend/package.json
+++ b/Cat_Shop-main/Cat_Shop-femfa/frontend/package.json
@@ -16,6 +16,7 @@
     "test-backend": "node test-backend-connection.js"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
