--- a/Cat_Shop-femfa/frontend/package.json
+++ b/Cat_Shop-femfa/frontend/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview",
     "test-db": "tsx test-connection.ts",
     "init-db": "tsx scripts/init-catshop-db.ts",
+    "init-product-types": "tsx scripts/init-product-types.ts",
     "create-admin": "tsx scripts/create-admin-user.ts",
     "test-backend": "node test-backend-connection.js"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -63,6 +65,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
