--- a/Cat_Shop-femfa/back-end/pom.xml
+++ b/Cat_Shop-femfa/back-end/pom.xml
@@ -19,8 +19,8 @@
     <description>Spring Boot project for Cat Shop management system</description>
 
     <properties>
-        <java.version>17</java.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <java.version>21</java.version>
+        <mapstruct.version>1.6.2</mapstruct.version>
         <jjwt.version>0.11.5</jjwt.version>
     </properties>
 
@@ -159,7 +159,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -168,6 +168,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>1.18.32</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>0.2.0</version>
                         </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
