--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -29,13 +29,15 @@ spring.data.redis.timeout=60000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=cumanhpt@gmail.com
-spring.mail.password=giqhwjdvpqwxzxec
+spring.mail.password=pqfxqlvhulhgsszf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.default-encoding=UTF-8
 
 # ===================== GOOGLE OAUTH2 =====================
@@ -57,34 +59,43 @@ logging.level.org.springframework.mail=DEBUG
 logging.level.com.sun.mail=DEBUG
 logging.level.com.catshop.catshop.service.impl.OtpServiceImpl=DEBUG
 
+# ===================== SMS CONFIGURATION =====================
+# Bật/tắt gửi SMS thật (false = chỉ log OTP, true = gửi SMS thật qua SMS gateway)
+sms.enabled=true
+
+# SMS Provider: none, twilio, aws-sns, esms, sms-brandname
+# none: Chỉ log OTP (DEV MODE)
+# twilio: Sử dụng Twilio SMS gateway (cần API key)
+# aws-sns: Sử dụng AWS SNS (cần AWS credentials)
+# esms: Sử dụng ESMS (Việt Nam, cần API key)
+# sms-brandname: Sử dụng SMS Brandname (Việt Nam, cần API key)
+sms.provider=esms
+
+# Twilio Configuration (nếu dùng Twilio)
+# sms.twilio.account-sid=your_account_sid
+# sms.twilio.auth-token=your_auth_token
+# sms.twilio.from-number=+1234567890
+
+# AWS SNS Configuration (nếu dùng AWS SNS)
+# sms.aws.access-key=your_access_key
+# sms.aws.secret-key=your_secret_key
+# sms.aws.region=us-east-1
+
+# ESMS Configuration (nếu dùng ESMS - Việt Nam)
+# Đăng ký tại: https://esms.vn/
+# Lấy API Key và Secret Key từ: Quản lý → API
+sms.esms.api-key=95D8140FF0B9FF3C25575E294DA5E4
+sms.esms.secret-key=5C0E9567B31A5282AA7898AB7A6B88
+sms.esms.brand-name=
+
+# SMS Brandname Configuration (nếu dùng SMS Brandname - Việt Nam)
+# sms.sms-brandname.api-key=your_api_key
+# sms.sms-brandname.secret-key=your_secret_key
+# sms.sms-brandname.brand-name=YOUR_BRAND_NAME
+
 # ===================== FRONTEND URL (for QR Login) =====================
 # URL của frontend để tạo QR code link
 # Development: http://localhost:5173
 # Production: https://yourdomain.com
 frontend.url=http://localhost:5173
-
-# ===================== OAUTH2 REDIRECT CONFIGURATION =====================
-# Trang redirect sau khi đăng nhập Google OAuth thành công
-# Có thể là: /oauth2/success (để xử lý tokens), /profile, /account, etc.
-# Nếu dùng /oauth2/success, frontend sẽ tự động redirect về /profile sau khi lưu tokens
-oauth2.redirect.path=/oauth2/success
-
-# ===================== MFA SECURITY CONFIGURATION =====================
-# Số lần thử MFA thất bại tối đa trước khi khóa tài khoản
-mfa.security.max-failed-attempts=5
-
-# Thời gian khóa tài khoản (phút) sau khi vượt quá số lần thử
-mfa.security.lockout-duration-minutes=15
-
-# Khoảng thời gian (phút) để tính rate limiting
-mfa.security.rate-limit-window-minutes=15
-
-# Số lần thử tối đa trong một khoảng thời gian
-mfa.security.max-attempts-per-window=5
-
-# Ngưỡng số lần thử thất bại từ một IP để coi là đáng ngờ
-mfa.security.suspicious-ip-threshold=10
-
-# Thời gian hết hạn của trusted device (ngày)
-mfa.security.trusted-device-expiry-days=30
 
