--- a/Cat_Shop-femfa/frontend/env.example
+++ b/Cat_Shop-femfa/frontend/env.example
@@ -10,3 +10,9 @@ VITE_NODE_ENV=development
 
 # CORS Configuration (nếu cần)
 VITE_CORS_ORIGIN=http://localhost:5173
+
+# Google reCAPTCHA Configuration
+# Đăng ký tại: https://www.google.com/recaptcha/admin/create
+# Chọn loại: reCAPTCHA v2 - "Tôi không phải là người máy"
+# Thêm domain của bạn vào danh sách domains được phép
+VITE_RECAPTCHA_SITE_KEY=your_recaptcha_site_key_here
