Commit code len nhanh moi

--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=catshop
 
 # ===================== DATABASE (PostgreSQL) =====================
-spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/catshop2
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
@@ -33,13 +33,13 @@ spring.mail.password=pqfxqlvhulhgsszf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=10000
-spring.mail.properties.mail.smtp.timeout=10000
-spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.connectiontimeout=30000
+spring.mail.properties.mail.smtp.timeout=30000
+spring.mail.properties.mail.smtp.writetimeout=30000
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.default-encoding=UTF-8
-
+.
 # ===================== GOOGLE OAUTH2 =====================
 spring.security.oauth2.client.registration.google.client-id=49213557997-6jbtjailqqauq1ufca5b20dr3a46m85l.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
