--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -99,3 +99,10 @@ sms.esms.brand-name=
 # Production: https://yourdomain.com
 frontend.url=http://localhost:5173
 
+# ===================== GOOGLE reCAPTCHA =====================
+# Secret key dùng để xác thực captcha từ backend
+# Đăng ký tại: https://www.google.com/recaptcha/admin/create
+# Chọn loại: reCAPTCHA v2 - "Tôi không phải là người máy"
+captcha.secret=6LdS8B0sAAAAAOuNIjKpr4qWxvrBrD9tiXeopBZG
+
+
