--- a/Cat_Shop-femfa/frontend/package.json
+++ b/Cat_Shop-femfa/frontend/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.13.0",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
