--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=catshop
 
 # ===================== DATABASE (PostgreSQL) =====================
-spring.datasource.url=jdbc:postgresql://localhost:5432/catshop
-spring.datasource.username=postgres
-spring.datasource.password=1234
+# Sử dụng environment variables, fallback về localhost nếu không có
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/catshop}
+spring.datasource.username=${DATABASE_USER:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:1234}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -20,9 +21,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # ===================== REDIS =====================
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.password=
+# Sử dụng environment variables, fallback về localhost nếu không có
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
 spring.data.redis.timeout=60000
 
 # ===================== EMAIL (GMAIL SMTP) =====================
