--- a/Cat_Shop-femfa/frontend/nginx.conf
+++ b/Cat_Shop-femfa/frontend/nginx.conf
@@ -26,17 +26,18 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # API proxy (optional - if you want to proxy API calls through nginx)
-    location /api {
-        proxy_pass http://backend:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # API proxy - Commented out because frontend uses VITE_API_BASE_URL to call API directly
+    # On Railway, frontend and backend are separate services, so we don't need nginx proxy
+    # location /api {
+    #     proxy_pass http://backend:8080;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_set_header Host $host;
+    #     proxy_cache_bypass $http_upgrade;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    # }
 }
 
