--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -31,18 +31,19 @@ spring.data.redis.password=${REDIS_PASSWORD:}
 spring.data.redis.timeout=60000
 
 # ===================== EMAIL (GMAIL SMTP) =====================
-# Railway có thể chặn port 587, nên dùng port 465 với SSL
+# Mặc định dùng STARTTLS port 587 (dùng tốt ở local). Railway thường chặn SMTP,
+# nên trên Railway nên tắt SMTP và chỉ dùng Resend (email.smtp.enabled=false).
 spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-spring.mail.username=cumanhpt@gmail.com
-spring.mail.password=qnwvekclnhhzfbuj
+spring.mail.port=${SPRING_MAIL_PORT:587}
+spring.mail.username=${SPRING_MAIL_USERNAME:}
+spring.mail.password=${SPRING_MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=${SPRING_MAIL_SMTP_SSL_ENABLE:false}
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.ssl.checkserveridentity=true
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.properties.mail.smtp.starttls.required=false
 spring.mail.properties.mail.smtp.connectiontimeout=30000
 spring.mail.properties.mail.smtp.timeout=30000
 spring.mail.properties.mail.smtp.writetimeout=30000
