--- a/Cat_Shop-femfa/back-end/src/main/resources/application.properties
+++ b/Cat_Shop-femfa/back-end/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=catshop
 
 # ===================== DATABASE (PostgreSQL) =====================
 # Sử dụng environment variables, fallback về localhost nếu không có
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/catshop}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/catshop2}
 spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:1234}
 spring.jpa.hibernate.ddl-auto=update
